// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package meta;
option go_package="chromium.googlesource.com/enterprise/cel/go/meta";


message Tree {
  // To canonicalize the representation, the list of files must be sorted by
  // name in en-US locale.
  repeated FileReference file = 1;
}

message FileReference {
  // Name of file.
  string name = 1;

  // Type of object
  enum Type {
    // This is a regular file.
    FILE = 0;

    // This is a directory. The |size| and |digest| refer to a binary encoded
    // Tree object.
    DIRECTORY = 1;
  }
  Type type = 2;

  // Size in bytes of the object.
  int64 size = 3;

  // The reference depends on the backend hosting the content indexed storage.
  string reference = 4;
}

